# teams-transcription-app

./: .gitignore  CMakeLists.txt  DEBUG_ANALYSIS.md  GUI_TEST_VERIFICATION.md  GUI_UPDATE_SUMMARY.md  LOGGING_DEBUG_GUIDE.md  PROGRESS.md  README.md  SESSION_SUMMARY_JULY16.md  SETUP_GUIDE.md  TEST_SETTINGS_GUIDE.md  build_instructions.md  build_with_logging.bat  daily_standup_template.md  debug_config.bat  quick_build.bat  simple_verify.bat  test_azure_openai.cpp  test_logging.md  verify_project.py  verify_setup.bat
.claude/: mcp_servers.json  settings.local.json
config/: settings.example.json
docs/: API_Documentation.md  Deployment_Guide.md  Detailed_Design_Document.md  Developer_Documentation.md  Installation_Guide.md  Project_Plan.md  Requirements_Specification.md  Testing_Documentation.md  User_Manual.md
libs/json/include/nlohmann/: json.hpp
resources/: app.rc  manifest.xml
scripts/: build.bat  clean.bat  setup.bat
src/: AudioCapture.cpp  AudioCapture.h  ConfigManager.cpp  ConfigManager.h  DebugLogger.h  MainWindow.cpp  MainWindow.h  ProcessMonitor.cpp  ProcessMonitor.h  SettingsDialog.cpp  SettingsDialog.h  SimpleLogger.cpp  SimpleLogger.h  SpeechRecognition.cpp  SpeechRecognition.h  main.cpp  resource.h
